sm_Istio/manifests/peerauthentication_namespace.yml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "enforce-strict-default"
  namespace: "default"
spec:
  mtls:
    mode: STRICT
